2001-09-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/ExternalUserAgent.pm (request): Made it so that the
	proxy is set using the env command if the external http client
	program commandline string doesn't include %P.
	* Netcomics/Config.pm.in: Fixed HTML/Themes dir name so that it
	would be replaced properly by the Makefile.
	* Makefile.PL (SUBPATHS): Updated paths to new ones set in
	Config.pm.in.
	* netcomics.spec (%files): Updated paths to new ones set in
	Config.pm.in.
	* doc/netcomics.pod: Updated paths to new ones set in
	Config.pm.in. Added clarification on how the proxy is used.
	Fixed unquoted commandline switches causing pod2html errors.
	* netcomicsrc: Updated paths to new ones set in Config.pm.in.
	Added clarification on how the proxy is used.
	* MANIFEST: removed angst; added inktank and mrlowe.
	* Makefile.PL (@modules): moved angst to @oldmodules; added
	inktank and mrlowe.

2001-09-18  Elliot Glaysher  <glaysher@umich.edu>

	* netcomics: Added changable theme support.
	* netcomicsrc: Added entries in netcomicsrc for changable theme
	support.
	* Netcomics/Config.pm.in: Changed function of -t, and added variable
	$html_theme.
	* Netcomics/HTML.pm: Added changable theme support.
	* Netcomics/Page.pm: Added changable theme support.
	* Netcomics/Set.pm: Added changable theme support.
	* Netcomics/HTML/Themes/Default.pm: Added a 'name' property.

2001-09-16  Elliot Glaysher  <glaysher@umich.edu>

	* lib/inktank: Added thanks to Chris Hostetter. Replaces lib/angst.
	* lib/angst: Deleted.

2001-09-14  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/GtkComics.pm: Add a small check to make comicpage be able
	to be "run in place" in the source distribution.

2001-09-14  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Util.pm (load_modules): Updated to be more generalized
	so that HTML themes could be loaded with it.

2001-09-05  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* html_tmpl/*: Removed the old template files.